[package]
name = "twirer"
description = "a small program that helps me with collecting Rust core changes"
version = "0.1.0"
authors = ["Andre Bogus <bogusandre@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
octocrab = "0.16.0"
tokio =  { version = "1.12", features = [ "macros", "rt-multi-thread" ] }
time = { version = "0.3.9", features = [ "formatting", "macros", "parsing" ] }
